{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 249,
  "lineage": "49958364-2e34-f670-c490-df5c5b68b01d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082291504c00322a8",
            "arn": "arn:aws:ec2:ap-northeast-2:744549229387:instance/i-065eb1533505f386d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065eb1533505f386d",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rke-rancher-20200922080053291100000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09fbad99918e6008c",
            "private_dns": "ip-172-16-1-59.ap-northeast-2.compute.internal",
            "private_ip": "172.16.1.59",
            "public_dns": "ec2-54-180-136-191.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.136.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e69b58115854392e",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023afe5c24d2311b5",
            "tags": {
              "Creator": "rancher",
              "Name": "rke-rancher-server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d6cb8cc28edc4dcb"
            ]
          },
          "dependencies": [
            "aws_key_pair.rke_key_pair",
            "aws_security_group.rancher_sg_allowall",
            "data.aws_ami.ubuntu",
            "data.template_file.init"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082291504c00322a8",
            "arn": "arn:aws:ec2:ap-northeast-2:744549229387:instance/i-0c82427382ce457f3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c82427382ce457f3",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rke-rancher-20200922080053291100000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a37cdf361eed0a94",
            "private_dns": "ip-172-16-3-141.ap-northeast-2.compute.internal",
            "private_ip": "172.16.3.141",
            "public_dns": "ec2-52-78-122-211.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.122.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01205c82daf149a1e",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e9f64876d902516",
            "tags": {
              "Creator": "rancher",
              "Name": "rke-rancher-server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d6cb8cc28edc4dcb"
            ]
          },
          "dependencies": [
            "aws_key_pair.rke_key_pair",
            "aws_security_group.rancher_sg_allowall",
            "data.aws_ami.ubuntu",
            "data.template_file.init"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082291504c00322a8",
            "arn": "arn:aws:ec2:ap-northeast-2:744549229387:instance/i-00c4f7829fe352abf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c4f7829fe352abf",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "rke-rancher-20200922080053291100000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020cf19de19316014",
            "private_dns": "ip-172-16-1-113.ap-northeast-2.compute.internal",
            "private_ip": "172.16.1.113",
            "public_dns": "ec2-13-125-3-219.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.3.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-077bc2077f539a567",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023afe5c24d2311b5",
            "tags": {
              "Creator": "rancher",
              "Name": "rke-rancher-server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d6cb8cc28edc4dcb"
            ]
          },
          "dependencies": [
            "aws_key_pair.rke_key_pair",
            "aws_security_group.rancher_sg_allowall",
            "data.aws_ami.ubuntu",
            "data.template_file.init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rancher-http-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:744549229387:targetgroup/rancher-http-80/25db36742d89e4c1",
            "arn_suffix": "targetgroup/rancher-http-80/25db36742d89e4c1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:744549229387:targetgroup/rancher-http-80/25db36742d89e4c1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "rancher-http-80",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rancher-http-80"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01ca7e39deac59b36"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rancher-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:744549229387:targetgroup/rancher-http-80/25db36742d89e4c1-20200922090013784500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:744549229387:targetgroup/rancher-http-80/25db36742d89e4c1",
            "target_id": "i-065eb1533505f386d"
          },
          "dependencies": [
            "aws_instance.rancher_server",
            "aws_lb_target_group.rancher-http-80"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:744549229387:targetgroup/rancher-http-80/25db36742d89e4c1-20200922090013723300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:744549229387:targetgroup/rancher-http-80/25db36742d89e4c1",
            "target_id": "i-0c82427382ce457f3"
          },
          "dependencies": [
            "aws_instance.rancher_server",
            "aws_lb_target_group.rancher-http-80"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:744549229387:targetgroup/rancher-http-80/25db36742d89e4c1-20200922090013697500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:744549229387:targetgroup/rancher-http-80/25db36742d89e4c1",
            "target_id": "i-00c4f7829fe352abf"
          },
          "dependencies": [
            "aws_instance.rancher_server",
            "aws_lb_target_group.rancher-http-80"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:744549229387:security-group/sg-03874d6530ed6c7e7",
            "description": "Security group for rancher nlb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03874d6530ed6c7e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rancher",
            "name_prefix": "",
            "owner_id": "744549229387",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rancher-nlb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ca7e39deac59b36"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rancher_sg_allowall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:744549229387:security-group/sg-0d6cb8cc28edc4dcb",
            "description": "Rancher quickstart - allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6cb8cc28edc4dcb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rke-rancher-allowall",
            "name_prefix": "",
            "owner_id": "744549229387",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "rke",
              "Name": "rke-rancher_sg_allowall"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ca7e39deac59b36"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1776248978",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03874d6530ed6c7e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nlb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2789018335",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03874d6530ed6c7e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nlb"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}